--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
 
         <!-- TODO: analyze the params below -->
         <org.mozilla.focus.widget.InlineAutocompleteEditText
-                android:id="@+id/urlView"
+                android:id="@+id/urlInputView"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
