--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -3,7 +3,5 @@
               android:orientation="vertical"
               android:layout_width="40dp"
               android:layout_height="40dp"
-              android:background="@color/photonBlue50"
->
-
-</LinearLayout>
+              android:background="@color/photonBlue40"
+              android:padding="12dp"/>
