--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,11 @@
             android:id="@+id/container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:focusable="true"
+            android:descendantFocusability="afterDescendants"> <!-- todo: can't focus inside, maybe descedentFocusability unneeded -->
+            <requestFocus/> <!-- Requests initial focus -->
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -37,7 +41,10 @@
         android:id="@+id/navigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start">
+        android:layout_gravity="start"
+        android:focusable="true"
+        android:nextFocusRight="@id/container"
+        android:descendantFocusability="afterDescendants">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
