--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,12 +6,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="50dp">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingLeft="12dp"
+            android:paddingBottom="50dp">
 
         <!-- TODO: analyze the params below -->
         <org.mozilla.focus.widget.InlineAutocompleteEditText
@@ -22,7 +25,7 @@
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/urlbar_hint"
                 android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
-                android:background="@android:color/transparent"
+                android:background="@color/cardview_dark_background"
                 android:inputType="textUri"
                 android:lines="1"
                 android:paddingTop="8dp"
@@ -38,18 +41,14 @@
                 android:textCursorDrawable="@drawable/cursor"
                 android:importantForAutofill="no"
                 tools:targetApi="o" /><!-- importantForAutofill is only supported on Android O+ -->
-
-        <ImageButton
-                android:id="@+id/clearView"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_clear"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_gravity="end"
-                android:visibility="gone"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/content_description_clear_input" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="15dp"
+            android:drawableStart="@drawable/ic_notification"
+            android:drawablePadding="5dp"
+            android:layout_gravity="center"
+            android:text="FirefoxTV"/>
 
     </LinearLayout>
 
@@ -57,6 +56,6 @@
             android:id="@+id/tileContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"/>
+            android:background="@android:color/transparent"/>
 
 </LinearLayout>
