--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="40dp"
-              android:layout_height="40dp"
-              android:background="@color/photonBlue40"
-              android:padding="12dp"/>
+              android:layout_width="130dp"
+              android:layout_height="86dp"
+              android:background="@drawable/home_tile_selector"
+              android:focusable="true"
+              android:clickable="true"
+              android:layout_margin="12dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_forward"/>
+
+</FrameLayout>
