Issue #80 - Remove extra buttons from urlbar, fix crashing.

--- a/app/src/main/res/layout/browser_display_toolbar.xml
+++ b/app/src/main/res/layout/browser_display_toolbar.xml
@@ -16,6 +16,9 @@
         android:layout_height="56dp"
         android:background="@drawable/animated_background"
         android:elevation="4dp"
+        android:layout_margin="15dp"
+        android:clickable="false"
+        android:focusable="false"
         app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
         android:clipChildren="false">
 
