--- a/app/src/main/res/layout/browser_display_toolbar.xml
+++ b/app/src/main/res/layout/browser_display_toolbar.xml
@@ -8,6 +8,7 @@
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="56dp"
+    android:visibility="gone"
     android:clipChildren="false">
 
     <FrameLayout
