--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -10,10 +10,17 @@
               android:focusable="true"
               android:clickable="true"
               android:layout_margin="12dp">
+
     <ImageView
-        android:layout_width="match_parent"
+            android:id="@+id/tile_icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"/>
+
+    <TextView
+        android:id="@+id/tile_title"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:src="@drawable/ic_forward"/>
+        />
 
 </FrameLayout>
