Adjust shortcut tiles styles.

--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -7,7 +7,8 @@
               android:orientation="vertical"
               android:layout_width="140dp"
               android:layout_height="100dp"
-              android:background="@drawable/home_tile_selector"
+              android:background="@drawable/home_tile_background"
+              android:foreground="@drawable/home_tile_selector"
               android:focusable="true"
               android:clickable="true"
               android:layout_margin="12dp">
@@ -26,7 +27,8 @@
         android:id="@+id/tile_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:gravity="center_horizontal"
         android:textColor="@android:color/black"
         android:fontFamily="sans-serif-medium"
