--- a/app/src/main/res/drawable/home_tile_selector.xml
+++ b/app/src/main/res/drawable/home_tile_selector.xml
@@ -5,22 +5,22 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="#99ffffff"/>
-            <corners android:radius="4dp"/>
+            <solid android:color="#99000000"/>
+            <corners android:radius="@dimen/home_tile_corner_radius"/>
         </shape>
     </item>
 
     <item android:state_focused="true">
         <shape>
-            <solid android:color="#bbffffff"/>
-            <corners android:radius="4dp"/>
+            <solid android:color="@android:color/transparent"/>
+            <corners android:radius="@dimen/home_tile_corner_radius"/>
         </shape>
     </item>
 
     <item>
         <shape>
-            <solid android:color="@android:color/white"/>
-            <corners android:radius="4dp"/>
+            <solid android:color="#22000000"/>
+            <corners android:radius="@dimen/home_tile_corner_radius"/>
         </shape>
     </item>
 
