--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -11,7 +11,9 @@
               android:foreground="@drawable/home_tile_selector"
               android:focusable="true"
               android:clickable="true"
-              android:layout_margin="12dp">
+              android:layout_marginStart="12dp"
+              android:layout_marginEnd="12dp"
+              android:layout_marginBottom="18dp">
 
     <ImageView
             android:id="@+id/tile_icon"
