--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,14 +41,16 @@
                 android:textCursorDrawable="@drawable/cursor"
                 android:importantForAutofill="no"
                 tools:targetApi="o" /><!-- importantForAutofill is only supported on Android O+ -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:drawableStart="@drawable/ic_notification"
-            android:drawablePadding="5dp"
-            android:layout_gravity="center"
-            android:text="FirefoxTV"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_gravity="center_vertical"
+                android:scaleType="centerInside"
+                android:layout_marginStart="50dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/ic_firefox_and_workmark"
+                tools:ignore="ContentDescription"/>
 
     </LinearLayout>
 
