--- a/app/src/main/res/menu/menu_home_drawer.xml
+++ b/app/src/main/res/menu/menu_home_drawer.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/drawer_home"
+        android:icon="@drawable/ic_home"
         android:title="@string/menu_drawer_home"/>
     <item
         android:id="@+id/drawer_settings"
+        android:icon="@drawable/ic_settings"
         android:title="@string/menu_drawer_settings"/>
 </menu>
