--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,4 +1,26 @@
-<vector android:height="24dp" android:viewportHeight="16.0"
-    android:viewportWidth="16.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M15.7,7.3l-7,-7c-0.4,-0.4 -1,-0.4 -1.4,0l-7,7c-0.4,0.4 -0.4,1 0,1.4 0.4,0.4 1,0.4 1.4,0l0.3,-0.3L2,13c0,1.7 1.3,3 3,3h6c1.7,0 3,-1.3 3,-3L14,8.4l0.3,0.3c0.2,0.2 0.4,0.3 0.7,0.3 0.3,0 0.5,-0.1 0.7,-0.3 0.4,-0.4 0.4,-1 0,-1.4zM8,11.5c0,-0.3 0.2,-0.5 0.5,-0.5s0.5,0.2 0.5,0.5 -0.2,0.5 -0.5,0.5 -0.5,-0.2 -0.5,-0.5zM12,13c0,0.6 -0.4,1 -1,1h-1L10,9c0,-0.6 -0.4,-1 -1,-1L7,8c-0.6,0 -1,0.4 -1,1v5L5,14c-0.6,0 -1,-0.4 -1,-1L4,6.4l4,-4 4,4L12,13z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:pathData="M21,12l-9,-9l-9,9"
+        android:strokeLineCap="round"
+        android:strokeColor="#FFF"
+        android:fillColor="#00000000"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"/>
+    <path
+        android:pathData="M6,9v9.9A2,2 0,0 0,7.92 21H16a2.1,2.1 0,0 0,2 -2.18V9"
+        android:strokeLineCap="round"
+        android:strokeColor="#FFF"
+        android:fillColor="#00000000"
+        android:strokeWidth="2"
+        android:strokeLineJoin="round"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M11,15h2v4h-2z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,16v0m1,-2H11a1,1 0,0 0,-1 1v5h4V15a1,1 0,0 0,-1 -1Z"/>
 </vector>
