--- a/app/src/main/res/layout/hint_navigation_bar.xml
+++ b/app/src/main/res/layout/hint_navigation_bar.xml
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         android:gravity="end|center_vertical"
         android:orientation="vertical"
-        android:background="@color/colorAccent"
+        android:background="@drawable/drawer_background"
         android:focusable="true">
 
     <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="48dp"
+            android:layout_marginBottom="24dp"
             android:src="@drawable/ic_home"
             tools:ignore="ContentDescription"/>
 
