Updating navigation drawer navigations and adding new icons

--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -23,4 +23,10 @@
     <path
         android:fillColor="#FFFFFF"
         android:pathData="M12,16v0m1,-2H11a1,1 0,0 0,-1 1v5h4V15a1,1 0,0 0,-1 -1Z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M10,21a1,1 0,0 0,1 -1L11,15h2v5a1,1 0,0 0,1 1ZM6,11.41a1,1 0,0 0,-1.7 -0.72l2,-2A1,1 0,0 0,6 9.41v2ZM18,9.41a1,1 0,0 0,-0.27 -0.68l2,2a1,1 0,0 0,-1.69 0.73ZM12.7,3.7a1,1 0,0 0,-1.39 0L12,3Z"/>
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M12,16v0M12,2a1,1 0,0 0,-0.71 0.29l-6,6h0l-3,3a1,1 0,1 0,1.41 1.41L5,11.41V18.9A3,3 0,0 0,7.92 22H16a3.1,3.1 0,0 0,3 -3.18v-7.4l1.29,1.29a1,1 0,1 0,1.41 -1.41l-3,-3h0l-6,-6A1,1 0,0 0,12 2ZM7.92,20A1,1 0,0 1,7 18.9V9.41l5,-5 5,5v9.4A1.1,1.1 0,0 1,16 20H14V15a1,1 0,0 0,-1 -1H11a1,1 0,0 0,-1 1v5Z"/>
 </vector>
