--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="16.0"
-    android:viewportWidth="16.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFFFF" android:pathData="M15,7h-2.1a4.967,4.967 0,0 0,-0.732 -1.753l1.49,-1.49a1,1 0,0 0,-1.414 -1.414l-1.49,1.49A4.968,4.968 0,0 0,9 3.1V1a1,1 0,0 0,-2 0v2.1a4.968,4.968 0,0 0,-1.753 0.732l-1.49,-1.49a1,1 0,0 0,-1.414 1.415l1.49,1.49A4.967,4.967 0,0 0,3.1 7H1a1,1 0,0 0,0 2h2.1a4.968,4.968 0,0 0,0.737 1.763c-0.014,0.013 -0.032,0.017 -0.045,0.03l-1.45,1.45a1,1 0,1 0,1.414 1.414l1.45,-1.45c0.013,-0.013 0.018,-0.031 0.03,-0.045A4.968,4.968 0,0 0,7 12.9V15a1,1 0,0 0,2 0v-2.1a4.968,4.968 0,0 0,1.753 -0.732l1.49,1.49a1,1 0,0 0,1.414 -1.414l-1.49,-1.49A4.967,4.967 0,0 0,12.9 9H15a1,1 0,0 0,0 -2zM5,8a3,3 0,1 1,3 3,3 3,0 0,1 -3,-3z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M20.75,11H17.91a6,6 0,0 0,-1 -2.47l2,-2a1,1 0,0 0,-1.41 -1.41l-2,2a6,6 0,0 0,-2.47 -1V3.25a1,1 0,0 0,-2 0V6.09a6,6 0,0 0,-2.47 1l-2,-2A1,1 0,0 0,5.11 6.52l2,2a6,6 0,0 0,-1 2.47H3.25a1,1 0,0 0,0 2H6.09a6,6 0,0 0,1.06 2.52,1 1,0 0,0 -0.23,0.15L5.11,17.48a1,1 0,1 0,1.41 1.41l1.81,-1.81a1,1 0,0 0,0.15 -0.23A6,6 0,0 0,11 17.91v2.84a1,1 0,0 0,2 0V17.91a6,6 0,0 0,2.47 -1l2,2a1,1 0,0 0,1.41 -1.41l-2,-2a6,6 0,0 0,1 -2.47h2.84a1,1 0,0 0,0 -2ZM8,12a4,4 0,1 1,4 4A4,4 0,0 1,8 12Z"/>
 </vector>
