Update sidebar colors.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -64,6 +64,8 @@
 
     <color name="scrollbarThumb">#b2b2b2b2</color>
     <color name="teal50">#00feff</color>
+    <color name="teal_nav">#03d8ff</color>
+    <color name="blue_nav">#0060df</color>
     <color name="ink70">#363959</color>
     <color name="ink80">#202340</color>
 </resources>
