--- a/app/src/main/res/drawable/drawer_background.xml
+++ b/app/src/main/res/drawable/drawer_background.xml
@@ -5,6 +5,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="270"
-        android:startColor="@color/photonBlue50"
-        android:endColor="@color/teal50" />
+        android:startColor="@color/blue_nav"
+        android:endColor="@color/teal_nav" />
 </shape>
