--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 <resources>
     <color name="colorPrimary">#ff272727</color>
     <color name="colorPrimaryDark">#6c3b6e</color>
-    <color name="colorAccent">@color/photonMagenta70</color>
+    <color name="colorAccent">@color/photonBlue70</color>
 
     <color name="colorAccentSettings">@color/photonBlue50</color>
 
