--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:padding="50dp">
+              android:padding="50dp"
+              android:background="@drawable/background_home">
 
     <LinearLayout
             android:id="@+id/homeUrlBar"
