--- a/app/src/main/res/layout/fragment_new_settings.xml
+++ b/app/src/main/res/layout/fragment_new_settings.xml
@@ -6,7 +6,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_home">
 
     <TextView
         android:layout_width="match_parent"
