--- a/app/src/main/res/menu/menu_home_drawer.xml
+++ b/app/src/main/res/menu/menu_home_drawer.xml
@@ -7,5 +7,5 @@
     <item
         android:id="@+id/drawer_settings"
         android:icon="@drawable/ic_settings"
-        android:title="@string/menu_drawer_settings"/>
+        android:title="@string/menu_settings"/>
 </menu>
