--- a/app/src/main/res/layout/fragment_new_settings.xml
+++ b/app/src/main/res/layout/fragment_new_settings.xml
@@ -24,21 +24,12 @@
         android:layout_weight="1"
         android:layout_gravity="center">
 
-        <CheckBox
-            android:id="@+id/telemetryButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:layout_gravity="center_vertical"
-            android:text="@string/preference_mozilla_telemetry2"
-            android:scaleType="fitCenter"
-            android:button="@drawable/telemetry_check_selector"/>
-        <!--
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
+            android:id="@+id/telemetryView"
             android:background="@drawable/settings_item_selector"
             android:focusable="true"
             android:layout_gravity="center_vertical">
@@ -54,9 +45,10 @@
                 android:layout_width="128dp"
                 android:layout_height="128dp"
                 android:scaleType="fitCenter"
+                android:background="@drawable/telemetry_check_selector"
+                android:button="@null"
                 android:layout_gravity="center"/>
         </LinearLayout>
-        -->
 
         <LinearLayout
             android:id="@+id/aboutButton"
