--- a/app/src/main/res/layout/custom_drawer_item.xml
+++ b/app/src/main/res/layout/custom_drawer_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="20dp">
+    android:padding="10dp">
 
     <FrameLayout
         android:id="@+id/urlInputContainerView"
