--- a/app/src/main/res/layout/custom_drawer_item.xml
+++ b/app/src/main/res/layout/custom_drawer_item.xml
@@ -76,7 +76,7 @@
 
         <ImageButton
             android:id="@+id/drawer_back_button"
-            android:clickable="false"
+            android:focusable="false"
             android:tint="@color/colorTextInactive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
 
         <ImageButton
             android:id="@+id/drawer_forward_button"
-            android:clickable="false"
+            android:focusable="false"
             android:tint="@color/colorTextInactive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
 
         <ImageButton
             android:id="@+id/drawer_refresh_button"
-            android:clickable="false"
+            android:focusable="false"
             android:tint="@color/colorTextInactive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
