Fix Ninja Star and Lock Icon API 22

--- a/app/src/main/res/layout/fragment_new_settings.xml
+++ b/app/src/main/res/layout/fragment_new_settings.xml
@@ -104,6 +104,7 @@
                     android:textSize="25sp"
                     android:layout_marginBottom="15dp" />
             <ImageView
+                    android:id="@+id/ic_lock"
                     android:layout_width="128dp"
                     android:layout_height="128dp"
                     android:src="@drawable/ic_lock"
