--- a/app/src/main/res/layout/hint_navigation_bar.xml
+++ b/app/src/main/res/layout/hint_navigation_bar.xml
@@ -24,6 +24,7 @@
             tools:ignore="ContentDescription"/>
 
     <ImageView
+            android:id="@+id/hint_settings"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="20dp"
