--- a/app/src/main/res/layout/hint_navigation_bar.xml
+++ b/app/src/main/res/layout/hint_navigation_bar.xml
@@ -23,11 +23,13 @@
             android:src="@drawable/ic_home"
             tools:ignore="ContentDescription"/>
 
+    <!-- We set the image resource dynamically because on lower API versions
+           it turns out distorted when set in the XML -->
     <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_settings"
-            tools:ignore="ContentDescription"/>
+        android:id="@+id/hint_settings"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="20dp"
+        tools:ignore="ContentDescription" />
 
 </LinearLayout>
