--- a/app/src/main/res/layout/fragment_new_settings.xml
+++ b/app/src/main/res/layout/fragment_new_settings.xml
@@ -36,6 +36,7 @@
             android:background="@drawable/settings_item_selector"
             android:focusable="true"
             android:layout_gravity="center_vertical">
+            <requestFocus/> <!-- Otherwise focus gets stuck on outer id/container. -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
